--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <div class="contenedor contenido-header">
             <h1>Rock & EDM Festival</h1>
             <nav class="navegacion-principal">
-                <a href="#">Line Up</a>
-                <a href="#">Galería</a>
-                <a href="#">Boletos</a>
+                <a href="#lineup">Line Up</a>
+                <a href="#galeria">Galería</a>
+                <a href="#boletos">Boletos</a>
             </nav>
         </div>
     </header>
@@ -48,7 +48,7 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nulla mauris, interdum a molestie eget, pellentesque sit amet leo. Proin id imperdiet mauris. Duis tellus tortor, commodo sit amet neque quis, semper molestie purus. Sed placerat id magna vel commodo. Proin tincidunt sed ex sed lacinia.</p>
         </div>
     </section>
-    <section class="lineup">
+    <section id="lineup" class="lineup">
         <h3>Line Up</h3>
         <p class="dia">Viernes 17</p>
         <div class="escenarios-contenedor contenedor">
@@ -154,11 +154,11 @@
             </div><!--.escenarios-->
         </div><!--.escenarios-contenedor-->
     </section>
-    <section class="galeria contenedor">
+    <section id="galeria" class="galeria contenedor">
         <h3>Galería</h3>
         <ul class="galeria-imagenes"></ul>
     </section>
-    <section class="boletos bg-verde">
+    <section id="boletos" class="boletos bg-verde">
         <h3>Boletos</h3>
         <div class="contenedor contenedor-boletos">
             <div class="basico pase">
